basic form setup

--- a/index.html
+++ b/index.html
@@ -14,8 +14,64 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <div class="fyle-card">
+            <form>
+                <div>
+                    <label for="gross-income">Enter gross annual income</label
+                    ><span
+                        class="pop-over"
+                        data-bs-toggle="popover"
+                        data-bs-content="And here's some amazing content. It's very engaging. Right?"
+                        >?</span
+                    >
+                </div>
+                <input type="text" class="form-control" id="gross-income" />
 
-        Hello world!!
+                <div>
+                    <label for="extra-income">Enter extra income</label
+                    ><span
+                        class="pop-over"
+                        data-bs-toggle="popover"
+                        data-bs-content="And here's some amazing content. It's very engaging. Right?"
+                    >
+                        ?
+                    </span>
+                </div>
+                <input type="text" class="form-control" id="extra-income" />
+
+                <div>
+                    <label for="age-group">Enter age group</label
+                    ><span
+                        class="pop-over"
+                        data-bs-toggle="popover"
+                        data-bs-content="And here's some amazing content. It's very engaging. Right?"
+                        >?</span
+                    >
+                </div>
+                <!-- <input type="text" class="form-control" id="gross-income" /> -->
+                <!-- enter a dropdown here -->
+
+                <div>
+                    <label for="deduction">Enter total applicable deductions</label
+                    ><span
+                        class="pop-over"
+                        data-bs-toggle="popover"
+                        data-bs-content="And here's some amazing content. It's very engaging. Right?"
+                        >?</span
+                    >
+                </div>
+                <input type="text" class="form-control" id="deduction" />
+
+                <button>
+                    Submit
+                </button>
+            </form>
+        </div>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"
+        ></script>
         <script src="script.js"></script>
     </body>
 </html>
