added get tax and css

--- a/index.html
+++ b/index.html
@@ -1,77 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Fyle</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fyle</title>
 
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-            crossorigin="anonymous"
-        />
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <div class="fyle-card">
-            <form>
-                <div>
-                    <label for="gross-income">Enter gross annual income</label
-                    ><span
-                        class="pop-over"
-                        data-bs-toggle="popover"
-                        data-bs-content="And here's some amazing content. It's very engaging. Right?"
-                        >?</span
-                    >
-                </div>
-                <input type="text" class="form-control" id="gross-income" />
-
-                <div>
-                    <label for="extra-income">Enter extra income</label
-                    ><span
-                        class="pop-over"
-                        data-bs-toggle="popover"
-                        data-bs-content="And here's some amazing content. It's very engaging. Right?"
-                    >
-                        ?
-                    </span>
-                </div>
-                <input type="text" class="form-control" id="extra-income" />
-
-                <div>
-                    <label for="age-group">Enter age group</label
-                    ><span
-                        class="pop-over"
-                        data-bs-toggle="popover"
-                        data-bs-content="And here's some amazing content. It's very engaging. Right?"
-                        >?</span
-                    >
-                </div>
-                <!-- <input type="text" class="form-control" id="gross-income" /> -->
-                <!-- enter a dropdown here -->
-
-                <div>
-                    <label for="deduction">Enter total applicable deductions</label
-                    ><span
-                        class="pop-over"
-                        data-bs-toggle="popover"
-                        data-bs-content="And here's some amazing content. It's very engaging. Right?"
-                        >?</span
-                    >
-                </div>
-                <input type="text" class="form-control" id="deduction" />
-
-                <button>
-                    Submit
-                </button>
-            </form>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="fyle-card">
+      <h4>Everything in Lakhs!!</h4>
+      <form class="needs-validation" novalidate id="submit">
+        <div>
+          <label class="form-label" for="gross-income"
+            >Enter gross annual income </label
+          ><span
+            class="pop-over"
+            data-bs-toggle="popover"
+            data-bs-placement="top"
+            data-bs-content="And here's some amazing content. It's very engaging. Right?"
+            >?</span
+          >
         </div>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"
-        ></script>
-        <script src="script.js"></script>
-    </body>
+        <input type="text" class="form-control" value="" required id="gross-income" />
+
+        <div>
+          <label class="form-label" for="extra-income"
+            >Enter extra income </label
+          ><span
+            class="pop-over"
+            data-bs-toggle="popover"
+            data-bs-placement="top"
+            data-bs-content="And here's some amazing content. It's very engaging. Right?"
+          >
+            ?
+          </span>
+        </div>
+        <input type="text" class="form-control" value="" required id="extra-income" />
+
+        <div>
+          <label class="form-label" for="age-group">Enter age group </label
+          ><span
+            class="pop-over"
+            data-bs-toggle="popover"
+            data-bs-placement="top"
+            data-bs-content="And here's some amazing content. It's very engaging. Right?"
+            >?</span
+          >
+        </div>
+        <select name="age-group" id="age-group" class="form-select" required>
+          <option disabled selected>Enter your age group here</option>
+          <option value="A">age &lt; 40</option>
+          <option value="B">age &ge; 40 and age &lt; 60</option>
+          <option value="C">age &ge; 60</option>
+        </select>
+
+        <div>
+          <label class="form-label" for="deduction"
+            >Enter total applicable deductions</label
+          ><span
+            class="pop-over"
+            data-bs-toggle="popover"
+            data-bs-placement="top"
+            data-bs-content="And here's some amazing content. It's very engaging. Right?"
+            >?</span
+          >
+        </div>
+        <input type="text" class="form-control" value="" required id="deduction" />
+
+        <button
+          class="w-100 btn btn-primary my-4"
+          type="button"
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModal"
+        >
+          Submit
+        </button>
+      </form>
+    </div>
+
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body text-center mt-5 pt-5">
+            <h1>Your overall income will be</h1>
+            <h5 id="total-income" class="color-primary"></h5>
+            <h3>after tax deduction.</h3>
+            <button
+              type="button"
+              class="btn btn-primary mb-5"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
+  </body>
 </html>
